# sbesfpgd

./: README.md  adahessian_baselines_results.json  cifar_1cycle_adaptive_damping_gpu_results.json  cifar_adahessian_sophia_gpu_results.json  cifar_baselines_gpu_results.json  cpu_experiment_results.json  experiment_results.json  gpu_experiment_results_stable.json  gpu_output.txt  matrix_free_results.json  misspec_scale_gpu_results.json  optimizer_baselines_results.json  pyproject.toml  relative_misspec_results.json  sophia_baselines_results.json  stochastic_extension_results.json
sbesfpgd-verify/: README.md  download_datasets.py  verify_theorem_iv2.py
scripts/: adahessian_baselines.py  cifar_1cycle_adaptive_damping_gpu.py  cifar_adahessian_sophia_gpu.py  cifar_baselines_gpu.py  compute_relative_misspec.py  cpu_experiments.py  gpu_experiments.py  matrix_free_experiments.py  misspec_scale_gpu.py  optimizer_baselines.py  plot_cifar10_25epochs.py  reproduce_eos.py  sophia_baselines.py  stochastic_extension.py
