[project]
name = "sbesfpgd"
version = "0.1.0"
description = "Analyzing the spectral stability of Natural Gradient Descent at the Edge of Stability (EoS)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "torchvision>=0.24.1",
    "pymupdf>=1.26.7",
    "asdl>=0.1.5",
]
